--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,8 +9,8 @@
 	--color-cloud: #f4f4fd;
 	--color-navy-blue-modal: #2e2f42;
 	--color-grey: #2e2f42;
-	--color-white: #ffffff
-
+	--color-white: #ffffff;
+    --color-bg-hero: rgba(46, 47, 66, 0.7);
 }
 
 
@@ -290,6 +290,10 @@ letter-spacing: 0.02em;
 	background-color: var(--color-navy-blue);
 	text-align: center;
 	padding: 188px 0;
+	background-image: linear-gradient(var(--color-bg-hero),var(--color-bg-hero)), url(../images/index/Hero/people-office\ 1.jpg);
+	max-width: 1440px;
+	background-position: center;
+	margin: auto;
 	
 		
 }
