--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,6 +11,8 @@
 	--color-grey: #2e2f42;
 	--color-white: #ffffff;
     --color-bg-hero: rgba(46, 47, 66, 0.7);
+	--color-social-media:rgba(255, 255, 255, 0.1);
+	
 }
 
 
@@ -186,7 +188,7 @@ padding: 12px 24px;
 	margin-right: 0;
 }
 .main-button:hover,
-.main-button:focus
+.main-button:focus,
 .main-button:active{
     background-color: var(--color-ocean);
     color: #ffffff;
@@ -254,6 +256,41 @@ align-items: center;
 	border: 1px solid #E7E9FC;
 	
 }
+
+.customers{
+	text-align: center;
+	padding-top: 242px;
+	padding-bottom: 120px;
+}
+.customers-icons{
+	display: flex;
+	padding: 0;
+	margin: auto;
+	
+	padding-top: 72px;
+	
+}
+.customers-icons-list{
+	border: 1px solid #8e8f99;
+	border-radius: 4px;
+	margin-right: 24px;
+	padding: 16px 32px 16px 32px;
+	}
+.customers-icons-list:last-child{
+	margin-right: 0;
+}
+.customers-icons-list:hover,
+.customers-icons-list:focus,
+.customers-icons-list:active{
+	border-color: var(--color-ocean);
+fill: var(--color-ocean);
+
+}
+
+.customers-icon{
+	
+}
+
 .footer{
 	background-color: var(--color-navy-blue);
 	padding-top: 100px;
@@ -273,6 +310,29 @@ align-items: center;
 	.footer-logo-s{
 		color: var(--color-cloud);
 	}
+
+	.social-media{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 24px;
+	}
+	.social-media-link{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	width: 40px;
+	height: 40px;
+	background-color: var(--color-social-media);
+		border-radius: 50%;
+		}
+
+		.social-media-link:hover,
+		.social-media-link:focus,
+		.social-media-link:active{
+			background-color: var(--color-green);
+		}
+
 .footer-desk{
 font-weight: 400;
 font-size: 16px;
@@ -302,6 +362,7 @@ letter-spacing: 0.02em;
 	display: flex;
 	padding: 0;
 	margin: 0;
+	margin-bottom: 8px;
 	
 	
 }
@@ -310,10 +371,20 @@ letter-spacing: 0.02em;
 	border-radius: 4px;
 	background-color: var(--color-cloud);
 	padding: 24px 102.14px 24px 102.14px;
+	
 }
+
 .hero-icons-list:last-child{
 	margin-right: 0;
 }
+
+.hero-icons-list:hover,
+.hero-icons-list:focus,
+.hero-icons-list:active{
+    border-color: var(--color-iris);
+}
+
+
 
 .h1-text{
 font-size: 56px;
@@ -395,20 +466,28 @@ margin: 0;
 margin-bottom: 8px;
 }
 
+.socials{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 24px;
+}
 .social-link{
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 24px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+width: 40px;
+height: 40px;
+background-color: var(--color-iris);
+	border-radius: 50%;
 
 }
 
+
+
 .social-icon{
-	display: flex;
-	width: 40px;
-height: 40px;
-background-color: var(--color-iris);
-border-radius: 50%;
+	
+	
 
 }
 .image-sec{
