--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -110,14 +110,7 @@ color: var(--color-navy-blue);
 	margin-right: 0;
 }
 
-.header-link::after{
-content: '';
-display: block;
-width: 100%;
-height: 4px;
-border-radius: 2px;
-background-color: var(--color-ocean);
-}
+
 
 .header-link:hover,
 .header-link:focus
@@ -338,15 +331,17 @@ fill: var(--color-ocean);
 	}
 
 	.footer-soc-media-text{
-		display: flex;
-		align-items: baseline;
-		justify-content: center;
 		color: var(--color-cornflower);
 		margin-bottom: 16px;
 	}
-	.footer-media{
 
+	.footer-container{
+		display: flex;
+		gap: 120px;
+		align-items: baseline;
 	}
+		
+	
 	.footer-desk{
 		font-weight: 400;
 		font-size: 16px;
